--- a/apps/docs/src/content/docs/api-reference/flow-component.mdx
+++ b/apps/docs/src/content/docs/api-reference/flow-component.mdx
@@ -456,7 +456,7 @@ const handleComplete = useCallback((event) => {
 ## See also
 
 - [defineFlow()](/api-reference/define-flow) - Create flows
-- [useFlow Hook](/api-reference/use-flow) - Access flow state
+- [useFlowState Hook](/api-reference/use-flow-state) - Access flow state
 - [FlowProvider](/api-reference/flow-provider) - Global configuration
 - [Callbacks Guide](/guides/callbacks) - Event handling
 
