--- a/apps/docs/src/content/docs/api-reference/index.mdx
+++ b/apps/docs/src/content/docs/api-reference/index.mdx
@@ -15,7 +15,7 @@ Create typed flow definitions with steps, branching, and versioning.
 
 Primary React component for rendering flows with full control over layout and behavior.
 
-### [useFlow() hook](/api-reference/use-flow)
+### [useFlowState() hook](/api-reference/use-flow-state)
 
 Access flow state and navigation methods from step components.
 
@@ -43,7 +43,7 @@ Comprehensive TypeScript types for type-safe flow development:
 
 - `FlowDefinition` - Flow configuration type
 - `RuntimeFlowDefinition<TDefinition, TContext>` - Returned by defineFlow()
-- `UseFlowReturn<TContext>` - Return type of useFlow()
+- `UseFlowReturn<TContext>` - Return type of useFlowState()
 - `FlowContext` - Base type for context objects
 - `PersistedFlowState<TContext>` - Saved state structure
 - `MigrateFunction<TContext>` - Migration function type
