--- a/apps/docs/src/content/docs/getting-started/decision-guide.mdx
+++ b/apps/docs/src/content/docs/getting-started/decision-guide.mdx
@@ -238,7 +238,7 @@ Still unsure? Here are some quick questions:
 
 ```tsx
 function ProfileStep() {
-  const { context, setContext, next } = useFlow();
+  const { context, setContext, next } = useFlowState();
 
   // Use your favorite form library for validation
   const form = useForm({
