--- a/apps/docs/src/content/docs/core-concepts/navigation.mdx
+++ b/apps/docs/src/content/docs/core-concepts/navigation.mdx
@@ -3,7 +3,7 @@ title: Navigation
 description: Control flow movement with type-safe navigation methods
 ---
 
-**Navigation** is how users move through your flow. useFlow provides several navigation methods that are type-safe, flexible, and work seamlessly with your flow definition.
+**Navigation** is how users move through your flow. useFlowState provides several navigation methods that are type-safe, flexible, and work seamlessly with your flow definition.
 
 ## Navigation methods
 
@@ -13,7 +13,7 @@ The primary way to progress through a flow:
 
 ```tsx
 function MyStep() {
-  const { next } = useFlow();
+  const { next } = useFlowState();
   
   return (
     <button onClick={() => next()}>
@@ -29,7 +29,7 @@ Update context while navigating:
 
 ```tsx
 function ProfileStep() {
-  const { next, context } = useFlow();
+  const { next, context } = useFlowState();
   const [name, setName] = useState('');
   
   return (
@@ -65,7 +65,7 @@ For branching flows, specify the destination:
 
 ```tsx
 function ChoiceStep() {
-  const { next } = useFlow();
+  const { next } = useFlowState();
   
   return (
     <div>
@@ -86,7 +86,7 @@ Combine both:
 
 ```tsx
 function ChoiceStep() {
-  const { next, context } = useFlow();
+  const { next, context } = useFlowState();
   
   return (
     <>
@@ -121,7 +121,7 @@ Semantically different from `next()` - indicates the user chose to skip:
 
 ```tsx
 function OptionalStep() {
-  const { next, skip } = useFlow();
+  const { next, skip } = useFlowState();
   
   return (
     <div>
@@ -146,7 +146,7 @@ Go back to the previous step:
 
 ```tsx
 function MyStep() {
-  const { next, back, canGoBack } = useFlow();
+  const { next, back, canGoBack } = useFlowState();
   
   return (
     <div>
@@ -192,7 +192,7 @@ Reset the flow to the beginning:
 
 ```tsx
 function CompleteStep() {
-  const { reset, context } = useFlow();
+  const { reset, context } = useFlowState();
   
   return (
     <div>
@@ -227,7 +227,7 @@ const flow = defineFlow({
 });
 
 function Step1() {
-  const { next } = flow.useFlow({ step: 'step1' });
+  const { next } = flow.useFlowState({ step: 'step1' });
   return <button onClick={() => next()}>Next</button>;
 }
 ```
@@ -249,7 +249,7 @@ const flow = defineFlow({
 });
 
 function ChoiceStep() {
-  const { next } = flow.useFlow({ step: 'choice' });
+  const { next } = flow.useFlowState({ step: 'choice' });
   
   // Component decides which path
   return (
@@ -283,7 +283,7 @@ const flow = defineFlow({
 }));
 
 function UserTypeStep() {
-  const { next } = flow.useFlow({ step: 'userType' });
+  const { next } = flow.useFlowState({ step: 'userType' });
   
   // Just update context, resolver handles branching
   return (
@@ -305,7 +305,7 @@ Skip steps based on conditions:
 
 ```tsx
 function PreferencesStep() {
-  const { next, skip, context } = useFlow();
+  const { next, skip, context } = useFlowState();
   
   // Skip if user is in express mode
   if (context.mode === 'express') {
@@ -327,7 +327,7 @@ You can check if back navigation is available using `canGoBack`:
 
 ```tsx
 function MyStep() {
-  const { back, canGoBack } = useFlow();
+  const { back, canGoBack } = useFlowState();
   
   return (
     <div>
@@ -349,7 +349,7 @@ See possible next destinations:
 
 ```tsx
 function MyStep() {
-  const { nextSteps } = useFlow();
+  const { nextSteps } = useFlowState();
   
   if (!nextSteps) {
     return <div>Final step!</div>;
@@ -378,7 +378,7 @@ Flow completion status:
 
 ```tsx
 function MyStep() {
-  const { status, context } = useFlow();
+  const { status, context } = useFlowState();
   
   if (status === 'complete') {
     return <div>Flow completed with: {JSON.stringify(context)}</div>;
@@ -412,7 +412,7 @@ const flow = defineFlow({
 });
 
 function Step1() {
-  const { next } = flow.useFlow({ step: 'step1' });
+  const { next } = flow.useFlowState({ step: 'step1' });
   
   next();         // ✅ Valid - goes to 'step2'
   next('step2');  // ✅ Valid - explicit target
@@ -420,7 +420,7 @@ function Step1() {
 }
 
 function Step2() {
-  const { next } = flow.useFlow({ step: 'step2' });
+  const { next } = flow.useFlowState({ step: 'step2' });
   
   next('option1');  // ✅ Valid
   next('option2');  // ✅ Valid
@@ -440,7 +440,7 @@ type MyContext = {
 };
 
 function MyStep() {
-  const { next } = useFlow<MyContext>();
+  const { next } = useFlowState<MyContext>();
   
   next({ name: 'Alice', age: 30 });  // ✅ Valid
   next({ name: 'Bob' });             // ✅ Valid (partial update)
@@ -587,7 +587,7 @@ Add keyboard shortcuts:
 
 ```tsx
 function MyStep() {
-  const { next, back, canGoBack } = useFlow();
+  const { next, back, canGoBack } = useFlowState();
   
   useEffect(() => {
     const handleKeyPress = (e: KeyboardEvent) => {
@@ -612,7 +612,7 @@ Automatically navigate after a condition:
 
 ```tsx
 function ProcessingStep() {
-  const { next } = useFlow();
+  const { next } = useFlowState();
   const [isProcessing, setIsProcessing] = useState(true);
   
   useEffect(() => {
@@ -638,7 +638,7 @@ Navigate based on validation:
 
 ```tsx
 function FormStep() {
-  const { next } = useFlow();
+  const { next } = useFlowState();
   const [data, setData] = useState({});
   const [errors, setErrors] = useState({});
   
@@ -689,7 +689,7 @@ Track user journey through the flow:
 
 ```tsx
 function MyStep() {
-  const { history } = useFlow();
+  const { history } = useFlowState();
   
   // Get all visited steps
   const visitedSteps = history.map(h => h.stepId);
@@ -719,7 +719,7 @@ function MyStep() {
 
 ```tsx
 function Breadcrumbs() {
-  const { path, stepId } = useFlow();
+  const { path, stepId } = useFlowState();
   
   return (
     <div className="breadcrumbs">
@@ -742,7 +742,7 @@ Always validate data before moving forward:
 
 ```tsx
 function MyStep() {
-  const { next } = useFlow();
+  const { next } = useFlowState();
   const [data, setData] = useState({});
   
   const isValid = () => {
@@ -766,7 +766,7 @@ When possible, allow users to go back:
 
 ```tsx
 function MyStep() {
-  const { next, back, canGoBack } = useFlow();
+  const { next, back, canGoBack } = useFlowState();
   
   return (
     <div className="navigation">
@@ -797,7 +797,7 @@ Check for terminal steps:
 
 ```tsx
 function MyStep() {
-  const { next, nextSteps } = useFlow();
+  const { next, nextSteps } = useFlowState();
   
   if (!nextSteps) {
     // Terminal step - no next
