--- a/apps/docs/src/content/docs/guides/linear-flows.mdx
+++ b/apps/docs/src/content/docs/guides/linear-flows.mdx
@@ -51,7 +51,7 @@ type OnboardingContext = {
 
 ```tsx
 function WelcomeStep() {
-  const { next } = onboardingFlow.useFlow({ step: "welcome" });
+  const { next } = onboardingFlow.useFlowState({ step: "welcome" });
 
   return (
     <div>
@@ -63,7 +63,7 @@ function WelcomeStep() {
 }
 
 function ProfileStep() {
-  const { next, back, context } = onboardingFlow.useFlow({ step: "profile" });
+  const { next, back, context } = onboardingFlow.useFlowState({ step: "profile" });
   const [name, setName] = useState(context.name || "");
   const [email, setEmail] = useState(context.email || "");
 
@@ -94,7 +94,7 @@ function ProfileStep() {
 }
 
 function PreferencesStep() {
-  const { next, back } = onboardingFlow.useFlow({ step: "preferences" });
+  const { next, back } = onboardingFlow.useFlowState({ step: "preferences" });
   const [theme, setTheme] = useState<"light" | "dark">("light");
   const [notifications, setNotifications] = useState(false);
 
@@ -128,7 +128,7 @@ function PreferencesStep() {
 }
 
 function CompleteStep() {
-  const { context, reset } = onboardingFlow.useFlow({ step: "complete" });
+  const { context, reset } = onboardingFlow.useFlowState({ step: "complete" });
 
   return (
     <div>
@@ -180,7 +180,7 @@ Prevent navigation until data is valid:
 
 ```tsx
 function ProfileStep() {
-  const { next } = onboardingFlow.useFlow({ step: "profile" });
+  const { next } = onboardingFlow.useFlowState({ step: "profile" });
   const [name, setName] = useState("");
   const [email, setEmail] = useState("");
   const [errors, setErrors] = useState<Record<string, string>>({});
@@ -222,7 +222,7 @@ Allow users to skip non-essential steps:
 
 ```tsx
 function PreferencesStep() {
-  const { next, skip } = onboardingFlow.useFlow({ step: "preferences" });
+  const { next, skip } = onboardingFlow.useFlowState({ step: "preferences" });
   const [preferences, setPreferences] = useState({});
 
   return (
@@ -246,7 +246,7 @@ Show users where they are in the flow:
 
 ```tsx
 function ProgressBar() {
-  const { stepId, steps } = useFlow();
+  const { stepId, steps } = useFlowState();
 
   const stepOrder = ["welcome", "profile", "preferences", "complete"];
   const currentIndex = stepOrder.indexOf(stepId);
@@ -287,7 +287,7 @@ Let users see and navigate the path:
 
 ```tsx
 function Breadcrumbs() {
-  const { path, stepId } = useFlow();
+  const { path, stepId } = useFlowState();
 
   return (
     <nav className="breadcrumbs">
@@ -310,7 +310,7 @@ Validate data against an API:
 
 ```tsx
 function EmailStep() {
-  const { next } = onboardingFlow.useFlow({ step: "email" });
+  const { next } = onboardingFlow.useFlowState({ step: "email" });
   const [email, setEmail] = useState("");
   const [isChecking, setIsChecking] = useState(false);
   const [error, setError] = useState("");
@@ -444,7 +444,7 @@ Initialize from context to preserve data on back navigation:
 
 ```tsx
 function ProfileStep() {
-  const { context, next } = useFlow();
+  const { context, next } = useFlowState();
 
   // ✅ Good: Initialize from context
   const [name, setName] = useState(context.name || "");
@@ -460,7 +460,7 @@ Always show users how to move forward and backward:
 
 ```tsx
 function MyStep() {
-  const { next, back, canGoBack } = useFlow();
+  const { next, back, canGoBack } = useFlowState();
 
   return (
     <div className="navigation">
@@ -502,7 +502,7 @@ const onboardingFlow = defineFlow({
 
 // 3. Step components
 function WelcomeStep() {
-  const { next } = onboardingFlow.useFlow({ step: "welcome" });
+  const { next } = onboardingFlow.useFlowState({ step: "welcome" });
 
   return (
     <div className="step">
@@ -514,7 +514,7 @@ function WelcomeStep() {
 }
 
 function ProfileStep() {
-  const { next, back, context } = onboardingFlow.useFlow({ step: "profile" });
+  const { next, back, context } = onboardingFlow.useFlowState({ step: "profile" });
   const [name, setName] = useState(context.name || "");
   const [email, setEmail] = useState(context.email || "");
 
@@ -556,7 +556,7 @@ function ProfileStep() {
 }
 
 function PreferencesStep() {
-  const { next, back, skip } = onboardingFlow.useFlow({ step: "preferences" });
+  const { next, back, skip } = onboardingFlow.useFlowState({ step: "preferences" });
   const [theme, setTheme] = useState<"light" | "dark">("light");
   const [notifications, setNotifications] = useState(false);
 
@@ -602,7 +602,7 @@ function PreferencesStep() {
 }
 
 function CompleteStep() {
-  const { context, reset } = onboardingFlow.useFlow({ step: "complete" });
+  const { context, reset } = onboardingFlow.useFlowState({ step: "complete" });
 
   return (
     <div className="step">
