--- a/apps/docs/src/content/docs/guides/persistence.mdx
+++ b/apps/docs/src/content/docs/guides/persistence.mdx
@@ -121,7 +121,7 @@ Control when the flow saves using the `save()` function:
 
 ```tsx
 function MyStep() {
-  const { save } = flow.useFlow({ step: "profile" });
+  const { save } = flow.useFlowState({ step: "profile" });
 
   const handleChange = async () => {
     // Make changes...
@@ -591,7 +591,7 @@ The `reset()` function automatically clears the persisted state:
 
 ```tsx
 function MyFlow() {
-  const { reset } = useFlow();
+  const { reset } = useFlowState();
 
   const handleClearProgress = () => {
     reset(); // Resets flow to start AND clears saved state
@@ -834,7 +834,7 @@ export function OnboardingFlow() {
 
 ```tsx title="ProfileStep.tsx"
 export function ProfileStep() {
-  const { context, setContext, next, save } = onboardingFlow.useFlow({
+  const { context, setContext, next, save } = onboardingFlow.useFlowState({
     step: "profile",
   });
 
