--- a/apps/docs/src/content/docs/index.mdx
+++ b/apps/docs/src/content/docs/index.mdx
@@ -84,7 +84,7 @@ Build a complete onboarding flow with conditional navigation in 3 simple steps:
    import { onboardingFlow } from "./flow";
 
    function UserTypeStep() {
-     const { context, setContext, next } = onboardingFlow.useFlow({ step: "userType" });
+     const { context, setContext, next } = onboardingFlow.useFlowState({ step: "userType" });
      
      const handleSubmit = () => {
        next(); // ✅ Automatically navigates based on accountType
@@ -122,7 +122,7 @@ Build a complete onboarding flow with conditional navigation in 3 simple steps:
    import { onboardingFlow } from "./flow";
 
    function BusinessStep() {
-     const { context, setContext, next, back } = onboardingFlow.useFlow({ step: "business" });
+     const { context, setContext, next, back } = onboardingFlow.useFlowState({ step: "business" });
      
      return (
        <div>
@@ -143,7 +143,7 @@ Build a complete onboarding flow with conditional navigation in 3 simple steps:
    import { onboardingFlow } from "./flow";
 
    function CompleteStep() {
-     const { context } = onboardingFlow.useFlow({ step: "complete" });
+     const { context } = onboardingFlow.useFlowState({ step: "complete" });
 
      return (
       <div>
