--- a/apps/docs/src/content/docs/recipes/checkout.mdx
+++ b/apps/docs/src/content/docs/recipes/checkout.mdx
@@ -114,7 +114,7 @@ export const checkoutFlow = defineFlow({
 import { checkoutFlow } from "./flow";
 
 export function CartStep() {
-  const { context, setContext, next } = checkoutFlow.useFlow({
+  const { context, setContext, next } = checkoutFlow.useFlowState({
     step: "cart"
   });
 
@@ -234,7 +234,7 @@ import { useState } from "react";
 import { checkoutFlow } from "./flow";
 
 export function ShippingStep() {
-  const { context, setContext, next, back } = checkoutFlow.useFlow({
+  const { context, setContext, next, back } = checkoutFlow.useFlowState({
     step: "shipping"
   });
 
@@ -476,7 +476,7 @@ export function ShippingStep() {
 import { checkoutFlow } from "./flow";
 
 export function PaymentStep() {
-  const { context, setContext, next, back } = checkoutFlow.useFlow({
+  const { context, setContext, next, back } = checkoutFlow.useFlowState({
     step: "payment"
   });
 
@@ -585,7 +585,7 @@ async function processPayment(data: any) {
 import { checkoutFlow } from "./flow";
 
 export function ReviewStep() {
-  const { context, next, back } = checkoutFlow.useFlow({
+  const { context, next, back } = checkoutFlow.useFlowState({
     step: "review"
   });
 
@@ -676,7 +676,7 @@ export function ReviewStep() {
 import { checkoutFlow } from "./flow";
 
 export function ConfirmationStep() {
-  const { context } = checkoutFlow.useFlow({
+  const { context } = checkoutFlow.useFlowState({
     step: "confirmation"
   });
 
